# DesignSystemBiulder

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  capturar-changes.patch  capturar-inevitavel-v2.patch  capturar-inevitavel-v3.patch  capture.py  design_system_generator.py  downloader.py  pyproject.toml  railway.toml  render.yaml  requirements.txt
deploy/: Dockerfile
engine/: pipeline.py
layers/: design.py  fidelity.py  graph.py  reality.py  vision.py
templates/: index.html
